# proyecto-mis-finanzas-v2

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_statement_previews.py  0003_add_user_id_to_transactions.py  0004_add_user_id_to_categories.py  0004_goals_and_recurring.py  0005_revoked_tokens.py  0005_transaction_parity.py  0006_goal_contributions.py  0007_audit_events.py  0008_statement_balances.py  0009_notifications.py  0010_composite_indexes.py  0011_rule_target_tag.py  0012_attachments.py
backend/app/: main.py
backend/app/core/: cache.py  config.py  database.py  logging.py  rate_limit.py  security.py
backend/app/models/: __init__.py  account.py  attachment.py  audit.py  budget.py  category.py  category_rule.py  goal.py  institution.py  mixins.py  notification.py  recurring.py  revoked_token.py  statement_preview.py  tag.py  transaction.py  transaction_split.py  transaction_tag.py  uploaded_file.py  user.py
backend/app/scripts/: bootstrap.py  seed.py
backend/tests/: conftest.py  test_accounts.py  test_ai.py  test_ai_service.py  test_attachments.py  test_audit_reconciliation.py  test_auth.py  test_budgets.py  test_categories.py  test_debt_payoff.py  test_forecast_budgets.py  test_goals.py  test_intelligence.py  test_ofx_parser.py  test_patrimonio.py  test_recurring.py  test_reports.py  test_rules.py  test_search.py  test_statement_parser.py  test_statements.py  test_transactions.py
(+130 files in other folders)
