[project]
name = "mis-finanzas-v2-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "bcrypt>=4.2.0",
    "pyjwt>=2.9.0",
    "pdfplumber>=0.11.4",
    "pytesseract>=0.3.13",
    "pillow>=11.0.0",
    "openpyxl>=3.1.5",
    "python-dateutil>=2.9.0",
    "email-validator>=2.2.0",
    "structlog>=24.4.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
